--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,11 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  Title: <%= f.text_field :title %><br>
+
+  <%= f.fields_for :ingredients do |i| %>
+
+    Ingredient name: <%= i.text_field :name %><br>
+    Ingredient quantity: <%= i.text_field :quantity %><br>
+
+  <% end %>
+   <%= f.submit %>
+<% end %>
